--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+body{
+	margin: 0;
+	height: 100vh;
+	position: relative;
+}
+#line{
+	color: #000000;
+	width: 200px;
+	height: 2px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform-origin: center center;
+	transform: translate(-50%, -50%) rotate(0deg);
+}
