--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,13 @@ body{
 	height: 100vh;
 	position: relative;
 }
-#line{
-	color: #000000;
-	width: 200px;
-	height: 2px;
+#line {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform-origin: center center;
-	transform: translate(-50%, -50%) rotate(0deg);
+  top: 50%;
+  left: 50%;
+  width: 200px;
+  height: 2px;
+  background-color: #000000;
+  transform-origin: center center;
+  transform: translate(-50%, -50%) rotate(0deg);
 }
